config/deploy/tmp/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 3
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: billin19/worker:aj-stage
          imagePullPolicy: Always
          command:
            - python3
            - /app/worker.py
          resources:
            requests:
              cpu: 500m
              memory: 5000Mi
            limits:
              cpu: 5000m
              memory: 8000Mi
          livenessProbe:
            exec:
              command:
                - python3
                - /app/conn.py
            failureThreshold: 5
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          readinessProbe:
            exec:
              command:
                - python3
                - /app/conn.py
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 20
