config/deploy/tmp/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
  annotations:
    kubernetes.io/description: "Backend deployment - DO NOT SCALE beyond 1 replica"
spec:
  replicas: 1
  strategy:
    type: Recreate # Ensures no more than 1 pod exists during updates
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      restartPolicy: Always # Update the restart policy to "Always"
      containers:
        - name: backend
          image: billin19/backend:aj-stage
          imagePullPolicy: Always
          command:
            - /bin/sh
          args:
            - -c
            - >
              /app/main &
              jobctl run ClearWorkerQueue && 
              jobctl run InitAggregates && 
              jobctl run SimpleUpdateSecurities && 
              jobctl run StartAlertLoop && 
              jobctl run StartPolygonWebSocket && 
              jobctl run UpdateMarketMetrics && 
              jobctl run UpdateSectors && 
              jobctl run UpdateSecurityCik && 
              jobctl run UpdateSecurityDetails &&
              wait
          ports:
            - containerPort: 5058
          resources:
            requests:
              cpu: "1000m"
              memory: "2000Mi"
            limits:
              cpu: "8000m"
              memory: "8000Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - port: 5058
      targetPort: 5058
  type: ClusterIP
