config/deploy/tmp/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: billin19/db:aj-stage
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 1000m
              memory: 2000Mi
            limits:
              cpu: 5000m
              memory: 10000Mi
          volumeMounts:
            - name: db-pvc
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-pvc
          persistentVolumeClaim:
            claimName: db-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
