config/deploy/tmp/ingress.yaml
## ConfigMap for Nginx Controller
#apiVersion: v1
#kind: ConfigMap
#metadata:
#  name: ingress-nginx-controller
#data:
#  use-forwarded-headers: "true"
#  compute-full-forwarded-for: "true"
#  enable-real-ip: "true"
#  proxy-real-ip-cidr: "0.0.0.0/0"
#  # The actual nginx.conf is now stored in a separate file
#  # and mounted via the Nginx Dockerfile
#---
## Nginx Deployment
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: nginx
#  labels:
#    app: nginx
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: nginx
#  template:
#    metadata:
#      labels:
#        app: nginx
#    spec:
#      containers:
#        - name: nginx
#          image: billin19/nginx:aj-stage
#          ports:
#            - containerPort: 80
#          resources:
#            limits:
#              cpu: "0.5"
#              memory: "512Mi"
#            requests:
#              cpu: "0.2"
#              memory: "256Mi"
#---
## Nginx Service
#apiVersion: v1
#kind: Service
#metadata:
#  name: nginx
#spec:
#  selector:
#    app: nginx
#  ports:
#    - port: 80
#      targetPort: 80
#  type: ClusterIP
#---
## RBAC Configuration for Nginx Ingress Controller
#apiVersion: rbac.authorization.k8s.io/v1
#kind: ClusterRole
#metadata:
#  name: ingress-nginx-ingress-nginx
#rules:
#  - apiGroups:
#      - ""
#    resources:
#      - configmaps
#      - endpoints
#      - nodes
#      - pods
#      - secrets
#      - services
#    verbs:
#      - list
#      - watch
#      - get
#      - create
#      - update
#      - patch
#  - apiGroups:
#      - ""
#    resources:
#      - nodes
#    verbs:
#      - get
#  - apiGroups:
#      - ""
#    resources:
#      - services
#    verbs:
#      - get
#      - list
#      - watch
#  - apiGroups:
#      - "extensions"
#      - "networking.k8s.io"
#    resources:
#      - ingresses
#      - ingressclasses
#    verbs:
#      - get
#      - list
#      - watch
#  - apiGroups:
#      - ""
#    resources:
#      - events
#    verbs:
#      - create
#      - patch
#  - apiGroups:
#      - "extensions"
#      - "networking.k8s.io"
#    resources:
#      - ingresses/status
#    verbs:
#      - update
#  - apiGroups:
#      - "networking.k8s.io"
#    resources:
#      - ingressclasses
#    verbs:
#      - get
#      - list
#      - watch
#---
#apiVersion: rbac.authorization.k8s.io/v1
#kind: ClusterRoleBinding
#metadata:
#  name: ingress-nginx-ingress-nginx
#roleRef:
#  apiGroup: rbac.authorization.k8s.io
#  kind: ClusterRole
#  name: ingress-nginx-ingress-nginx
#subjects:
#  - kind: ServiceAccount
#    name: ingress-nginx
#    namespace: ingress-nginx

# Ingress Configuration
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
spec:
  ingressClassName: nginx
  rules:
    - host: stage.atlantis.trading
      http:
        paths:
          - pathType: Prefix
            path: "/private"
            backend:
              service:
                name: backend
                port:
                  number: 5058
          - pathType: Prefix
            path: "/poll"
            backend:
              service:
                name: backend
                port:
                  number: 5058
          - pathType: Prefix
            path: "/public"
            backend:
              service:
                name: backend
                port:
                  number: 5058
          - pathType: Prefix
            path: "/backend"
            backend:
              service:
                name: backend
                port:
                  number: 5058
          - pathType: Prefix
            path: "/ws"
            backend:
              service:
                name: backend
                port:
                  number: 5058
          - pathType: Prefix
            path: "/health"
            backend:
              service:
                name: backend
                port:
                  number: 5058
          - pathType: Prefix
            path: "/backend/health"
            backend:
              service:
                name: backend
                port:
                  number: 5058
          - pathType: Prefix
            path: "/_app"
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 80
